fix case study sticky header hide on mobile.
also hides prev/next arrows on case study highlight slider on mobile.

--- a/css/pages/_case-studies.scss
+++ b/css/pages/_case-studies.scss
@@ -492,6 +492,15 @@
             line-height: 29px;
          }
       }
+
+      .feat-highlight-wrapper {
+         .bx-wrapper {
+            .bx-prev,
+            .bx-next {
+               display: none;
+            }
+         }
+      }
    }
 }
 
