--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -213,7 +213,7 @@
    }
 
    .blog,
-   .case-studies {
+   .post-type-archive-case-studies {
       .sticky-header-wrapper .sticky-header {
          display: block;
       }
